[package]
name = "dragonfly-playground-rs"
edition = "2024"
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.91.1"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4" }
criterion = { version = "0.7", features = ["async_tokio"] }
futures = { version = "0.3" }
rand = "0.9.2"
redis = { version = "0.32", features = ["tokio-comp", "sentinel", "tcp_nodelay", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "write_throughput"
path = "benches/write_throughput.rs"
harness = false

[[bench]]
name = "payload_latency"
path = "benches/payload_latency.rs"
harness = false

[[bench]]
name = "pipeline_builder"
path = "benches/pipeline_builder.rs"
harness = false
